# pkg/api/service.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.28.1
+// 	protoc-gen-go v1.30.0
 // 	protoc        (unknown)
 // source: service.proto
 
@@ -51,18 +51,25 @@ var file_service_proto_rawDesc = []byte{
 	0x64, 0x52, 0x61, 0x6e, 0x6b, 0x12, 0x10, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x41, 0x64, 0x64,
 	0x52, 0x61, 0x6e, 0x6b, 0x52, 0x65, 0x71, 0x1a, 0x0b, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x45,
 	0x6d, 0x70, 0x74, 0x79, 0x22, 0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x3a, 0x01, 0x2a, 0x22,
-	0x09, 0x2f, 0x61, 0x64, 0x64, 0x2d, 0x72, 0x61, 0x6e, 0x6b, 0x42, 0x09, 0x5a, 0x07, 0x2e, 0x2f,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x09, 0x2f, 0x61, 0x64, 0x64, 0x2d, 0x72, 0x61, 0x6e, 0x6b, 0x32, 0x5c, 0x0a, 0x0e, 0x50, 0x72,
+	0x6f, 0x64, 0x75, 0x63, 0x74, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x4a, 0x0a, 0x0b,
+	0x41, 0x64, 0x64, 0x50, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x74, 0x73, 0x12, 0x14, 0x2e, 0x6d, 0x61,
+	0x69, 0x6e, 0x2e, 0x41, 0x64, 0x64, 0x50, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x74, 0x73, 0x52, 0x65,
+	0x71, 0x1a, 0x0b, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x18,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x3a, 0x01, 0x2a, 0x22, 0x0d, 0x2f, 0x61, 0x64, 0x64, 0x2d,
+	0x70, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x74, 0x73, 0x42, 0x09, 0x5a, 0x07, 0x2e, 0x2f, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var file_service_proto_goTypes = []interface{}{
-	(*User)(nil),          // 0: main.User
-	(*RankingReq)(nil),    // 1: main.RankingReq
-	(*AddPhrasesReq)(nil), // 2: main.AddPhrasesReq
-	(*AddRankReq)(nil),    // 3: main.AddRankReq
-	(*TokenMessage)(nil),  // 4: main.TokenMessage
-	(*RankingResp)(nil),   // 5: main.RankingResp
-	(*Empty)(nil),         // 6: main.Empty
+	(*User)(nil),           // 0: main.User
+	(*RankingReq)(nil),     // 1: main.RankingReq
+	(*AddPhrasesReq)(nil),  // 2: main.AddPhrasesReq
+	(*AddRankReq)(nil),     // 3: main.AddRankReq
+	(*AddProductsReq)(nil), // 4: main.AddProductsReq
+	(*TokenMessage)(nil),   // 5: main.TokenMessage
+	(*RankingResp)(nil),    // 6: main.RankingResp
+	(*Empty)(nil),          // 7: main.Empty
 }
 var file_service_proto_depIdxs = []int32{
 	0, // 0: main.AuthService.RegisterUser:input_type -> main.User
@@ -70,13 +77,15 @@ var file_service_proto_depIdxs = []int32{
 	1, // 2: main.RankService.Ranking:input_type -> main.RankingReq
 	2, // 3: main.RankService.AddPhrases:input_type -> main.AddPhrasesReq
 	3, // 4: main.RankService.AddRank:input_type -> main.AddRankReq
-	4, // 5: main.AuthService.RegisterUser:output_type -> main.TokenMessage
-	4, // 6: main.AuthService.LoginUser:output_type -> main.TokenMessage
-	5, // 7: main.RankService.Ranking:output_type -> main.RankingResp
-	6, // 8: main.RankService.AddPhrases:output_type -> main.Empty
-	6, // 9: main.RankService.AddRank:output_type -> main.Empty
-	5, // [5:10] is the sub-list for method output_type
-	0, // [0:5] is the sub-list for method input_type
+	4, // 5: main.ProductService.AddProducts:input_type -> main.AddProductsReq
+	5, // 6: main.AuthService.RegisterUser:output_type -> main.TokenMessage
+	5, // 7: main.AuthService.LoginUser:output_type -> main.TokenMessage
+	6, // 8: main.RankService.Ranking:output_type -> main.RankingResp
+	7, // 9: main.RankService.AddPhrases:output_type -> main.Empty
+	7, // 10: main.RankService.AddRank:output_type -> main.Empty
+	7, // 11: main.ProductService.AddProducts:output_type -> main.Empty
+	6, // [6:12] is the sub-list for method output_type
+	0, // [0:6] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -97,7 +106,7 @@ func file_service_proto_init() {
 			NumEnums:      0,
 			NumMessages:   0,
 			NumExtensions: 0,
-			NumServices:   2,
+			NumServices:   3,
 		},
 		GoTypes:           file_service_proto_goTypes,
 		DependencyIndexes: file_service_proto_depIdxs,
