# pkg/api/service_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.2.0
+// - protoc-gen-go-grpc v1.3.0
 // - protoc             (unknown)
 // source: service.proto
 
@@ -17,6 +17,11 @@ import (
 // is compatible with the grpc package it is being compiled against.
 // Requires gRPC-Go v1.32.0 or later.
 const _ = grpc.SupportPackageIsVersion7
+
+const (
+	AuthService_RegisterUser_FullMethodName = "/main.AuthService/RegisterUser"
+	AuthService_LoginUser_FullMethodName    = "/main.AuthService/LoginUser"
+)
 
 // AuthServiceClient is the client API for AuthService service.
 //
@@ -36,7 +41,7 @@ func NewAuthServiceClient(cc grpc.ClientConnInterface) AuthServiceClient {
 
 func (c *authServiceClient) RegisterUser(ctx context.Context, in *User, opts ...grpc.CallOption) (*TokenMessage, error) {
 	out := new(TokenMessage)
-	err := c.cc.Invoke(ctx, "/main.AuthService/RegisterUser", in, out, opts...)
+	err := c.cc.Invoke(ctx, AuthService_RegisterUser_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -45,7 +50,7 @@ func (c *authServiceClient) RegisterUser(ctx context.Context, in *User, opts ...
 
 func (c *authServiceClient) LoginUser(ctx context.Context, in *User, opts ...grpc.CallOption) (*TokenMessage, error) {
 	out := new(TokenMessage)
-	err := c.cc.Invoke(ctx, "/main.AuthService/LoginUser", in, out, opts...)
+	err := c.cc.Invoke(ctx, AuthService_LoginUser_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -94,7 +99,7 @@ func _AuthService_RegisterUser_Handler(srv interface{}, ctx context.Context, dec
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/main.AuthService/RegisterUser",
+		FullMethod: AuthService_RegisterUser_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(AuthServiceServer).RegisterUser(ctx, req.(*User))
@@ -112,7 +117,7 @@ func _AuthService_LoginUser_Handler(srv interface{}, ctx context.Context, dec fu
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/main.AuthService/LoginUser",
+		FullMethod: AuthService_LoginUser_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(AuthServiceServer).LoginUser(ctx, req.(*User))
@@ -140,6 +145,12 @@ var AuthService_ServiceDesc = grpc.ServiceDesc{
 	Metadata: "service.proto",
 }
 
+const (
+	RankService_Ranking_FullMethodName    = "/main.RankService/Ranking"
+	RankService_AddPhrases_FullMethodName = "/main.RankService/AddPhrases"
+	RankService_AddRank_FullMethodName    = "/main.RankService/AddRank"
+)
+
 // RankServiceClient is the client API for RankService service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
@@ -159,7 +170,7 @@ func NewRankServiceClient(cc grpc.ClientConnInterface) RankServiceClient {
 
 func (c *rankServiceClient) Ranking(ctx context.Context, in *RankingReq, opts ...grpc.CallOption) (*RankingResp, error) {
 	out := new(RankingResp)
-	err := c.cc.Invoke(ctx, "/main.RankService/Ranking", in, out, opts...)
+	err := c.cc.Invoke(ctx, RankService_Ranking_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -168,7 +179,7 @@ func (c *rankServiceClient) Ranking(ctx context.Context, in *RankingReq, opts ..
 
 func (c *rankServiceClient) AddPhrases(ctx context.Context, in *AddPhrasesReq, opts ...grpc.CallOption) (*Empty, error) {
 	out := new(Empty)
-	err := c.cc.Invoke(ctx, "/main.RankService/AddPhrases", in, out, opts...)
+	err := c.cc.Invoke(ctx, RankService_AddPhrases_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -177,7 +188,7 @@ func (c *rankServiceClient) AddPhrases(ctx context.Context, in *AddPhrasesReq, o
 
 func (c *rankServiceClient) AddRank(ctx context.Context, in *AddRankReq, opts ...grpc.CallOption) (*Empty, error) {
 	out := new(Empty)
-	err := c.cc.Invoke(ctx, "/main.RankService/AddRank", in, out, opts...)
+	err := c.cc.Invoke(ctx, RankService_AddRank_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -230,7 +241,7 @@ func _RankService_Ranking_Handler(srv interface{}, ctx context.Context, dec func
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/main.RankService/Ranking",
+		FullMethod: RankService_Ranking_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(RankServiceServer).Ranking(ctx, req.(*RankingReq))
@@ -248,7 +259,7 @@ func _RankService_AddPhrases_Handler(srv interface{}, ctx context.Context, dec f
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/main.RankService/AddPhrases",
+		FullMethod: RankService_AddPhrases_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(RankServiceServer).AddPhrases(ctx, req.(*AddPhrasesReq))
@@ -266,7 +277,7 @@ func _RankService_AddRank_Handler(srv interface{}, ctx context.Context, dec func
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/main.RankService/AddRank",
+		FullMethod: RankService_AddRank_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(RankServiceServer).AddRank(ctx, req.(*AddRankReq))
@@ -292,6 +303,96 @@ var RankService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "AddRank",
 			Handler:    _RankService_AddRank_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "service.proto",
+}
+
+const (
+	ProductService_AddProducts_FullMethodName = "/main.ProductService/AddProducts"
+)
+
+// ProductServiceClient is the client API for ProductService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type ProductServiceClient interface {
+	AddProducts(ctx context.Context, in *AddProductsReq, opts ...grpc.CallOption) (*Empty, error)
+}
+
+type productServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewProductServiceClient(cc grpc.ClientConnInterface) ProductServiceClient {
+	return &productServiceClient{cc}
+}
+
+func (c *productServiceClient) AddProducts(ctx context.Context, in *AddProductsReq, opts ...grpc.CallOption) (*Empty, error) {
+	out := new(Empty)
+	err := c.cc.Invoke(ctx, ProductService_AddProducts_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// ProductServiceServer is the server API for ProductService service.
+// All implementations must embed UnimplementedProductServiceServer
+// for forward compatibility
+type ProductServiceServer interface {
+	AddProducts(context.Context, *AddProductsReq) (*Empty, error)
+	mustEmbedUnimplementedProductServiceServer()
+}
+
+// UnimplementedProductServiceServer must be embedded to have forward compatible implementations.
+type UnimplementedProductServiceServer struct {
+}
+
+func (UnimplementedProductServiceServer) AddProducts(context.Context, *AddProductsReq) (*Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method AddProducts not implemented")
+}
+func (UnimplementedProductServiceServer) mustEmbedUnimplementedProductServiceServer() {}
+
+// UnsafeProductServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to ProductServiceServer will
+// result in compilation errors.
+type UnsafeProductServiceServer interface {
+	mustEmbedUnimplementedProductServiceServer()
+}
+
+func RegisterProductServiceServer(s grpc.ServiceRegistrar, srv ProductServiceServer) {
+	s.RegisterService(&ProductService_ServiceDesc, srv)
+}
+
+func _ProductService_AddProducts_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AddProductsReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ProductServiceServer).AddProducts(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ProductService_AddProducts_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ProductServiceServer).AddProducts(ctx, req.(*AddProductsReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// ProductService_ServiceDesc is the grpc.ServiceDesc for ProductService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var ProductService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "main.ProductService",
+	HandlerType: (*ProductServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "AddProducts",
+			Handler:    _ProductService_AddProducts_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
